--- a/app/src/main/res/layout/activity_asset.xml
+++ b/app/src/main/res/layout/activity_asset.xml
@@ -5,6 +5,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AssetActivity">
+    <Button
+        android:id="@+id/asset_show"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+
+        android:layout_marginTop="@dimen/double_large_margin"
+        android:layout_marginStart="@dimen/field_start_margin"
+        android:layout_marginEnd="@dimen/field_start_margin"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="@dimen/font_size"
+        android:text="@string/asset_show"/>
+    <TextView
+        android:id="@+id/asset_header"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/font_size_middle"
+
+        app:layout_constraintStart_toStartOf="@id/asset_show"
+        app:layout_constraintEnd_toEndOf="@id/asset_show"
+        app:layout_constraintTop_toBottomOf="@id/asset_show"
+        android:layout_marginTop="@dimen/large_margin"
+
+        android:text="@string/asset_purchased"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/asset_items"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintStart_toStartOf="@id/asset_show"
+        app:layout_constraintEnd_toEndOf="@id/asset_show"
+        app:layout_constraintTop_toBottomOf="@id/asset_header"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="@dimen/nav_margin"/>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="0dp"
