--- a/app/src/main/res/layout/asset_fragment.xml
+++ b/app/src/main/res/layout/asset_fragment.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AssetActivity">
+    tools:context=".AssetFragment">
+
     <Button
         android:id="@+id/asset_show"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
 
-        android:layout_marginTop="@dimen/double_large_margin"
+        android:layout_marginTop="@dimen/large_margin"
         android:layout_marginStart="@dimen/field_start_margin"
         android:layout_marginEnd="@dimen/field_start_margin"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,16 +41,6 @@
         app:layout_constraintEnd_toEndOf="@id/asset_show"
         app:layout_constraintTop_toBottomOf="@id/asset_header"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="@dimen/nav_margin"/>
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="0dp"
-        android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/bottom_nav_menu" />
+        android:layout_marginBottom="@dimen/little_margin"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
