--- a/app/src/main/res/layout/asset_fragment.xml
+++ b/app/src/main/res/layout/asset_fragment.xml
@@ -11,7 +11,7 @@
         android:id="@+id/asset_show"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-
+        android:background="@drawable/button_round"
         android:layout_marginTop="@dimen/large_margin"
         android:layout_marginStart="@dimen/field_start_margin"
         android:layout_marginEnd="@dimen/field_start_margin"
