--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -14,7 +14,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
 
-        android:hint="@string/auth_id_hint"/>
+        android:hint="@string/auth_id_hint"
+        android:autofillHints="id" />
     <TextView
         android:id="@+id/date_text"
         android:layout_width="wrap_content"
