--- a/app/src/main/res/layout/asset_fragment.xml
+++ b/app/src/main/res/layout/asset_fragment.xml
@@ -32,15 +32,21 @@
         android:layout_marginTop="@dimen/large_margin"
 
         android:text="@string/asset_purchased"/>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/asset_items"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swiper"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:orientation="vertical"
         app:layout_constraintStart_toStartOf="@id/asset_show"
         app:layout_constraintEnd_toEndOf="@id/asset_show"
         app:layout_constraintTop_toBottomOf="@id/asset_header"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="@dimen/little_margin"/>
+        android:layout_marginBottom="@dimen/little_margin">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/asset_items"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"/>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
