--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -6,39 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".HomeFragment">
 
-    <Button
-        android:id="@+id/login_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/button_round"
-
-        android:layout_marginTop="@dimen/large_margin"
-        android:layout_marginStart="@dimen/field_start_margin"
-        android:layout_marginEnd="@dimen/field_start_margin"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textSize="@dimen/font_size"
-        android:text="@string/home_login_hint"/>
-    <TextView
-        android:id="@+id/prod_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/home_prod"
-        android:textSize="@dimen/font_size"
-        app:layout_constraintStart_toStartOf="@id/login_button"
-        app:layout_constraintTop_toBottomOf="@id/login_button"
-        android:layout_marginTop="@dimen/little_margin"/>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/items"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintStart_toStartOf="@id/login_button"
-        app:layout_constraintEnd_toEndOf="@id/login_button"
-        app:layout_constraintTop_toBottomOf="@id/prod_title"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="@dimen/little_margin"
-        android:layout_marginBottom="@dimen/little_margin"/>
+
+        android:layout_marginTop="@dimen/field_start_margin"
+        android:layout_margin="@dimen/little_margin"
+        android:layout_width="0dp"
+        android:layout_height="0dp">
+
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swiper"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/items"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"/>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
