--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -5,66 +5,76 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DetailActivity">
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/header"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/marginTop"
-        android:layout_marginStart="@dimen/field_start_margin"
-        android:background="@drawable/header"
-        android:layout_marginEnd="@dimen/field_start_margin">
-        <TextView
-            android:id="@+id/product"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/detail_header_prod"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/v50"
-            android:textSize="@dimen/font_size"/>
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@id/rate"
-            app:layout_constraintEnd_toStartOf="@id/rate"
-            android:text="@string/detail_header_title"/>
-        <TextView
-            android:id="@+id/rate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/detail_header_title"
-            app:layout_constraintTop_toTopOf="@id/product"
-            app:layout_constraintStart_toStartOf="@id/v50"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:textColor="@color/red"
-            android:textSize="@dimen/font_size"/>
-        <TextView
-            android:id="@+id/risk_level"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/detail_header_risk"
-            android:textSize="@dimen/font_size_middle"
-            android:layout_marginTop="@dimen/field_start_margin"
-            app:layout_constraintTop_toBottomOf="@id/product"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/v50" />
-        <TextView
-            android:id="@+id/cal_method"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/detail_header_cal"
-            android:textSize="@dimen/font_size_middle"
-            app:layout_constraintTop_toTopOf="@id/risk_level"
-            app:layout_constraintStart_toStartOf="@id/v50"
-            app:layout_constraintEnd_toEndOf="parent"/>
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/v50"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.5"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_marginTop="@dimen/large_margin"
+        app:layout_constraintTop_toTopOf="parent"
+        app:cardElevation="@dimen/little_margin"
+        app:cardCornerRadius="@dimen/activity_margin">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/product"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/detail_header_prod"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="@dimen/activity_margin"
+                android:layout_marginStart="@dimen/activity_margin"
+                android:textSize="@dimen/font_size_large"/>
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/rate"
+                app:layout_constraintStart_toStartOf="@id/rate"
+                android:text="@string/detail_header_title"/>
+            <TextView
+                android:id="@+id/rate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_margin"
+                app:layout_constraintTop_toBottomOf="@id/product"
+                app:layout_constraintStart_toStartOf="@id/product"
+                android:textColor="@color/red"
+                android:textSize="@dimen/font_size"/>
+            <TextView
+                android:id="@+id/rate_suf"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="%"
+                android:layout_marginStart="@dimen/little_margin"
+                app:layout_constraintBottom_toBottomOf="@id/rate"
+                app:layout_constraintStart_toEndOf="@id/rate" />
+            <TextView
+                android:id="@+id/minAmount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/detail_header_min"
+                android:textSize="@dimen/font_size_middle"
+                app:layout_constraintBottom_toBottomOf="@id/date"
+                app:layout_constraintEnd_toStartOf="@id/buy_amount"/>
+            <TextView
+                android:id="@+id/buy_amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toStartOf="@id/amount_suf"
+                app:layout_constraintBottom_toBottomOf="@id/minAmount"
+                android:textSize="@dimen/font_size"/>
+            <TextView
+                android:id="@+id/amount_suf"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/minAmount"
+                android:layout_marginEnd="@dimen/activity_margin"
+                android:text="元"
+                android:textSize="@dimen/font_size_middle"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
     <TextView
         android:id="@+id/due_prefix"
         android:layout_width="wrap_content"
