--- a/app/src/main/res/layout/asset_fragment.xml
+++ b/app/src/main/res/layout/asset_fragment.xml
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/button_round"
-        android:layout_marginTop="@dimen/large_margin"
+        android:layout_marginTop="@dimen/activity_margin"
         android:layout_marginStart="@dimen/field_start_margin"
         android:layout_marginEnd="@dimen/field_start_margin"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,29 +24,36 @@
         android:id="@+id/asset_header"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/font_size_middle"
-
+        android:layout_marginTop="@dimen/activity_margin"
         app:layout_constraintStart_toStartOf="@id/asset_show"
         app:layout_constraintEnd_toEndOf="@id/asset_show"
         app:layout_constraintTop_toBottomOf="@id/asset_show"
-        android:layout_marginTop="@dimen/large_margin"
-
+        android:textSize="@dimen/font_size"
         android:text="@string/asset_purchased"/>
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swiper"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="@id/asset_show"
         app:layout_constraintEnd_toEndOf="@id/asset_show"
         app:layout_constraintTop_toBottomOf="@id/asset_header"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="@dimen/little_margin">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/asset_items"
+        android:layout_marginBottom="@dimen/activity_margin"
+        app:cardElevation="20dp"
+        app:cardCornerRadius="@dimen/activity_margin">
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swiper"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"/>
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/asset_header"
+            android:layout_marginBottom="@dimen/little_margin">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/asset_items"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="@dimen/activity_margin"
+                android:orientation="vertical"/>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
