--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#E91E63</color>
+    <color name="blue">#9F516FDF</color>
     <color name="gray">#c5c6d0</color>
 </resources>
