--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,6 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/large_margin"
+        android:layout_marginStart="@dimen/field_start_margin"
+        android:layout_marginEnd="@dimen/field_start_margin"
+
         app:layout_constraintTop_toTopOf="parent"
         app:cardElevation="@dimen/little_margin"
         app:cardCornerRadius="@dimen/activity_margin">
@@ -45,7 +49,7 @@
                 android:id="@+id/rate_suf"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="%"
+                android:text="@string/product_suffix"
                 android:layout_marginStart="@dimen/little_margin"
                 app:layout_constraintBottom_toBottomOf="@id/rate"
                 app:layout_constraintStart_toEndOf="@id/rate" />
@@ -71,7 +75,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="@id/minAmount"
                 android:layout_marginEnd="@dimen/activity_margin"
-                android:text="元"
+                android:text="@string/asset_amount_suffix"
                 android:textSize="@dimen/font_size_middle"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
@@ -82,8 +86,7 @@
         android:text="@string/detail_due_date"
         app:layout_constraintBottom_toTopOf="@id/input_guide"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
+        android:layout_marginStart="@dimen/large_margin"
         android:textSize="@dimen/font_size"/>
     <TextView
         android:id="@+id/due_date"
@@ -92,26 +95,42 @@
         app:layout_constraintStart_toEndOf="@id/due_prefix"
         app:layout_constraintBottom_toTopOf="@id/input_guide"
         android:textSize="@dimen/font_size"/>
-    <EditText
-        android:id="@+id/input"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/input_lay"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/input_guide"
-        android:background="#eeeeee"
         android:layout_marginStart="@dimen/large_margin"
         android:layout_marginEnd="@dimen/large_margin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:inputType="numberDecimal"
+
         android:hint="@string/detail_purchase_hint"
-        android:autofillHints=""/>
-    <Button
+
+        app:helperTextEnabled="true"
+        app:helperText="@string/detail_helper"
+
+        app:errorEnabled="true"
+
+        app:suffixText="@string/asset_amount_suffix"
+
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="numberDecimal"
+            />
+    </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/confirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_round"
         android:layout_margin="@dimen/large_margin"
-        app:layout_constraintTop_toBottomOf="@id/input"
+        app:cornerRadius="25dp"
+        app:strokeColor="@color/black"
+        app:strokeWidth="3dp"
+        app:layout_constraintTop_toBottomOf="@id/input_lay"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:text="@string/detail_confirm"/>
